[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Upgrades.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Castle/Castle_lv_3.svg" type="Texture" id=2]
[ext_resource path="res://Sprites/Castle/Castle_lv_1.svg" type="Texture" id=3]
[ext_resource path="res://Sprites/Castle/Castle_lv_2.svg" type="Texture" id=4]
[ext_resource path="res://Sprites/Castle/Castle_lv_4.svg" type="Texture" id=5]
[ext_resource path="res://Sprites/Menu/New_big_menu.svg" type="Texture" id=6]
[ext_resource path="res://Fonts/Breathe Fire.otf" type="DynamicFontData" id=7]
[ext_resource path="res://Sprites/Menu/New_menu.svg" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "nv3",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "nv1",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "nv2",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "nv4",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "aba",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 60
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "botao",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=5]
size = 63
font_data = ExtResource( 7 )

[node name="Upgrades" type="Node2D"]
position = Vector2( -120.889, 126.466 )
scale = Vector2( 0.59, 0.73 )
script = ExtResource( 1 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 595.674, 274.951 )
scale = Vector2( 0.577399, 0.475356 )
frames = SubResource( 1 )
animation = "nv1"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 521.13, 292.361 )
scale = Vector2( 0.53, 0.72 )
frames = SubResource( 2 )
animation = "aba"
__meta__ = {
"_edit_group_": true
}

[node name="nivel" type="Button" parent="."]
margin_left = 383.0
margin_top = 262.698
margin_right = 790.0
margin_bottom = 332.698
rect_scale = Vector2( 0.7, 1 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Castelo"
flat = true

[node name="upgradeButton" type="Button" parent="."]
margin_left = 385.0
margin_top = 522.0
margin_right = 680.0
margin_bottom = 587.0
flat = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="upgradeButton"]
position = Vector2( 132.246, 53.4472 )
scale = Vector2( 0.524, 0.688 )
frames = SubResource( 4 )
animation = "botao"

[node name="Label" type="Label" parent="upgradeButton"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -168.136
margin_top = -65.4794
margin_right = 161.864
margin_bottom = 69.5206
custom_fonts/font = SubResource( 5 )
text = "Upgrades
"
align = 1
valign = 3

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="nivel" to="." method="_on_nivel_pressed"]
[connection signal="pressed" from="upgradeButton" to="." method="_on_Button_pressed"]
